--- a/galleryapplication/src/index.css
+++ b/galleryapplication/src/index.css
@@ -7,12 +7,24 @@ body {
   -moz-osx-font-smoothing: grayscale;
   background-color: #ddd;
 }
+::-webkit-scrollbar {
+  width: 0px;
+}
 
 code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
 }
 
+.border{
+  border: 1px solid black;
+}
+
+.center{
+  align-items: center;
+  text-align: center;
+  align-self: center;
+}
 .big-form{
   width: 40%;
   margin: 30px 30%;
@@ -24,6 +36,16 @@ code {
   width: 300px;
   align-items: center;
   text-align: center;
+}
+.small-dialog{
+  height: auto;
+}
+.small-dialog > div{
+  display: flex;
+}
+.title{
+  margin: 5px;
+  padding: 5px;
 }
 .title-size{
   font-size: 25px;
@@ -109,10 +131,59 @@ code {
 .hidden{
   display: none;
 }
+.focusDiv{
+  display: flex;
+  justify-content: center;
+  margin-top: 50px;
+  height: auto;
+}
+.focusVerticalHolder{
+  overflow: hidden;
+  width: 40%;
+  border-radius: 15px;
+}
+.focusHorizontalHolder{
+  overflow: hidden;
+  width: auto;
+  border-radius: 15px;
+}
+.focusDiv > div > img{
+  width: 100%;
+  margin-bottom: -15px;
+}
+.focusDiv > .icondiv{
+  height: auto;
+  align-self: center;
+}
+
+.focusCard{
+  width: 50%;
+  margin: 50px 25% 50px 25%;
+}
+.commentCard{
+  margin: 5px 20%;
+  padding: 0%;
+}
+.commentCardContent{
+ background-color: #ddd;
+ width: 100%;
+ height: 20%;
+ padding: 0%;
+}
+.newComment{
+  width: 60%;
+}
+.chips{
+  margin: 5px;
+}
 
 
 
-@media only screen and (max-width: 1000px) {
+
+
+
+
+@media only screen and (max-width: 1100px) {
   .big-form{
     width: 60%;
     margin: 30px 20%;
@@ -125,13 +196,36 @@ code {
     margin-top: 50px;
     text-align: left;
   }
+  .gridPictHolder{
+    width: 100%;
+    height: auto;
+    object-fit: contain;
+  }
   .gridPictHolder > .horizontPictChanged{
     overflow: hidden;
     object-fit: contain;
     height: 300px;
     margin-left: -40%
   }
+  .gridPictHolder > .verticalPict{
+    overflow: hidden;
+    object-fit: contain;
+    width: 100%;
+    height: auto;
+    margin-top: 0%;
+  }
+  .gridPictHolder > .horizontPict{
+    overflow: hidden;
+    object-fit: contain;
+    width: 100%;
+    margin-top: 0%;
+  }
 }
+
+
+
+
+
 
 @media only screen and (max-width: 720px) {
   .big-form{
@@ -139,11 +233,16 @@ code {
     margin: 30px 5%;
   }
   .gridListHolder{
-    width: 600px;
+    width: 300px;
     margin-left: auto;
     margin-right: auto;
-    margin-top: 50px;
+    margin-top: 0px;
     text-align: left;
+  }
+  .gridPictHolder{
+    width: 100%;
+    height: 50px;
+    object-fit: contain;
   }
   .gridPictHolder > .horizontPictChanged{
     overflow: hidden;
@@ -156,12 +255,16 @@ code {
     object-fit: contain;
     width: 100%;
     height: auto;
-    margin-top: -20%;
+    margin-top: 0%;
   }
   .gridPictHolder > .horizontPict{
     overflow: hidden;
     object-fit: contain;
     width: 100%;
-    margin-top: -30%;
+    margin-top: 0%;
+  }
+  .focusCard{
+    width: 90%;
+    margin: 50px 5% 50px 5%;
   }
 }
